homepage animation mobile screen issue fixed done

--- a/src/Components/Homepage/homepage.css
+++ b/src/Components/Homepage/homepage.css
@@ -113,7 +113,7 @@
 
 .homeContainer h3 {
     font-size: 1.2rem;
-    max-width: 80%;
+    max-width: 95%;
     font-weight: 600;
     text-align: center;
 
